suppress hibernate logging in JPA tests

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,3 +2,6 @@ root.profile=set in root with default profile
 root.default=set in root with default profile
 config.profile=set in root with default profile
 config.default=set in root with default profile
+
+# do not log hibernate SQL statements
+spring.jpa.properties.hibernate.show_sql=false
